
	* time.d (thread_from_arg) [MULTITHREAD]: fix g++ gcsafety build

2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

        * xthread.d: use "raw" mutexes for emulating spinlocks on
        architectures with no inline asm versions

2011-05-18  Vladimir Tzankov  <vtzankov@gmail.com>

        * spvw_sigcld.d (sigcld_enabled_INCF/DECF): fix counting

2011-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in: finish the 2008-05-31 CL_CC_NEED_CCPAUX patch
	by removing the special case of comment5 in UTIL building
	(full): fix the grep REPLACE_ regexp (gnulib replacements)

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c: do not include <ws2tcpip.h> twice
	* modules/rawsock/configure.in: <winsock2.h> is checked by gl_SOCKETLIB;
	add LIBSOCKET to LIBS while checking for functions

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/i18n/configure.in: gl_FUNC_NL_LANGINFO is already called
	by gl_INIT in the top-level config file

2011-05-18  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f, modules/clx/new-clx/configure.in:
	* modules/fastcgi/configure.in, modules/regexp/configure.in:
	* modules/rawsock/configure.in, modules/rawsock/rawsock.c:
	* modules/syscalls/configure.in, configure.in, m4/general.m4:
	* m4/rusage.m4: do not check for gnulib files
	* Makefile.devel (GNULIB_CORE): add sys_uio & socketlib (already
	present as dependencies)
	* m4/putenv.m4: remove (should have been removed on 2010-09-27)
	* modules/syscalls/calls.c, modules/syscalls/configure.in:
	<sys/wait.h> and <wchar.h> are provided by gnulib

2011-05-18  Sam Steingold  <sds@gnu.org>

	* makemake.in (SUBDIR_CFLAGS): add @NO_CXX@ because
	gnulib regexp and fnmatch cannot be compiled with C++

2011-05-17  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c, modules/berkeley-db/bdb.c:
	* modules/berkeley-db/configure.in, modules/syscalls/configure.in:
	* modules/fastcgi/fastcgi_wrappers.c, modules/gdbm/gdbm.c: